--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+/* body{
+  background: linear-gradient(to right bottom,rgb(19, 42, 1) 50%,rgb(7, 76, 3) 50%,black 50%, black 50%);
+} */
+
+/* .navbar{
+  
+  display: inline;
+  list-style-type:none;
+  
+  
+} */
+/* .list{
+  padding-left:3%;
+  float:right;
+
+} */
