--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,22 @@
   float:right;
 
 } */
+.image{
+  width: 40%;
+  height: 40%;
+  border-radius: 50%;
+  float:right;
+  margin-right: 10%;
+
+}
+.button{
+  margin-top: 20%;
+}
+#hometext{
+ display:flex;
+ flex-direction: column;
+ /* align-items: center;
+ justify-content: center; */
+ background-color: red;
+
+}
